terraform/transit-opentest/ec2.tf
locals {
  vpn_instance_id = join(",",  aws_instance.vpn.*.id)
}
resource "aws_instance" "vpn" {
    count = var.opentest_resource_count
    ami                             = "${data.aws_ami.amazon-linux-2.id}"
    instance_type                   = "t2.micro"
    source_dest_check               = false
    vpc_security_group_ids          = aws_security_group.vpn-sg.*.id
    subnet_id                       = local.subnet_id
    key_name                        = local.vpn_keypair_name

    user_data            = "${data.template_file.userdata.rendered}"
    iam_instance_profile = local.vpn_instance_profile

    tags = {
        Name = "${var.component_name}-vpn-gateway"
    }
}

data "template_file" "userdata" {
  template = "${file("${path.module}/templates/userdata.tpl")}"

  vars = {
    OPENTEST_ASSETS_BUCKET = local.opentest-assets-bucket
  }
}
