terraform/transit-opentest/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = var.vpc_id
  count = var.opentest_resource_count

  tags = {
    Name = "${var.component_name}-igw"
  }
}
#TODO: use NAT and private subnet instead of internet gateway
