terraform/transit-opentest/route.tf
resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    gateway_id = "${aws_internet_gateway.igw.id}"
    cidr_block = "0.0.0.0/0"
  }

  route {
    instance_id = aws_instance.vpn.id
    cidr_block = var.opentest_cidr
  }

  tags = {
    Name = "${var.component_name}-public-rtb"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = "${aws_subnet.public-subnet.id}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route" "opentest_route" {
  route_table_id = var.main_route_table_id
  destination_cidr_block = var.opentest_cidr
  instance_id = aws_instance.vpn.id
}
