terraform/transit-opentest/subnet.tf
resource "aws_subnet" "public-subnet" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.public_subnet
  availability_zone       = var.az
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.component_name}-public"
  }
}

output "subnet_id" {
  value = aws_subnet.public-subnet.id
}
